--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -5,10 +5,21 @@
     android:layout_height="match_parent"
     tools:context="com.android.monkey.testparentactivtiy.MainActivity">
 
+    <Button
+        android:id="@+id/btn1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="启动第二个页面"
+        android:textSize="20dp"
+        android:layout_marginTop="30dp"
+        android:layout_centerHorizontal="true"/>
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ThirdActivity"
         android:layout_centerInParent="true"
         android:textSize="30dp"/>
+
 </RelativeLayout>
